# yambot

./: Cargo.toml  README.md  config.toml
src/: handlers.rs  main.rs
src/backend/: config.rs  mod.rs
src/backend/overlay/: websocket.rs
src/backend/sfx/: mod.rs  sounds.rs
src/backend/tts/: languages.rs  mod.rs  queue.rs  service.rs
src/backend/twitch/: mod.rs
src/ui/: home.rs  mod.rs  settings.rs  sfx.rs  tts.rs
