[package]
name = "yambot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
twitch-irc = "5.0.1"
egui = "0.27.2"
eframe = { version = "0.27", features = [
  "default",
  "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
egui_extras = { version = "0.27.2", features = ["default", "all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] } # Add the types you want support for