[package]
name = "yambot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
twitch-irc = "5.0.1"
egui = "0.28.0"
eframe = { version = "0.28.0", features = [
  "default",
  "__screenshot", 
] }
egui_extras = { version = "0.28.0", features = ["default", "all_loaders"] }
image = { version = "0.25.1", features = ["jpeg", "png"] }
chrono = "*"
toml = "*"