[package]
name = "yambot"
version = "0.1.2"
edition = "2024"

[dependencies]
twitchy = { path = "../twitchy" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
egui = "0.33.0"
eframe = { version = "0.33.0", features = [
  "default",
  "__screenshot",
] }
egui_extras = { version = "0.33.0", features = ["default", "all_loaders"] }
image = { version = "0.25.6", features = ["jpeg", "png"] }
chrono = { version = "0.4.41", features = ["serde"] }
toml = "0.9.8"
project-root = "0.2.2"
log = "0.4.27"
env_logger = "0.11.8"
rodio = "0.21.1"
notify = "8.2.0"
tokio-stream = "0.1.17"

reqwest = { version = "0.13.1", features = ["json"] }
urlencoding = "2.1.3"
futures-util = "0.3"

# HTTP server for overlay
axum = { version = "0.8.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
